Updated UI components with theme-matched styling: - Added IST to TimeZone Converter - Added INR to Currency Calculator - Improved placeholders and calendar design - Enhanced form inputs and dropdowns

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://akshaykumarbolusani.github.io/React-Tools",
+  "homepage": "https://akshaykumarbolusani.github.io/",
   "name": "handyhub",
   "version": "0.1.0",
   "private": true,
